Update README.md
runing services without compose